--- a/BlazorApp1/wwwroot/index.html
+++ b/BlazorApp1/wwwroot/index.html
@@ -12,120 +12,7 @@
 
     <app>Loading...</app>
 
-    <script type="blazor-boot">
-    </script>
-    
-
-    <script>
-
-                //window.onload = Preload_Image_Corner();
-
-                //function Preload_Image_Corner() {
-                //    img_Corner_Shape = new Image();
-
-                //    img_Corner_Shape.onload = function () {
-                //        ImgIsLoaded = true;
-
-                //    };
-                //    img_Corner_Shape.onerror = function () {
-
-                //        console.log("error loading image");
-
-                //    };
-                //    img_Corner_Shape.src = '/content/1.png';
-
-
-                //    return true;
-                //}
-
-
-                //Blazor.registerFunction('JavaScriptDrawCanvas', (CanvasID) => {
-
-
-                //    var c = document.getElementById(CanvasID);
-                //    var ctx = c.getContext("2d");
-
-                //    ctx.font = "20px Georgia";
-                //    ctx.fillText("Hello World!", 10, 50);
-
-                //    ctx.font = "30px Verdana";
-
-                //    ctx.fillStyle = "red";
-                //    ctx.fillText("I am " + CanvasID, 10, 100);
-
-                //});
-
-
-
-
-                //var MyData;
-
-                //Blazor.registerFunction('JavaScriptSaveCanvasImage', (CanvasName) => {
-
-                //    var canvas = document.getElementsByTagName("canvas")[0];
-
-                //    // localStorage.setItem("abc", canvas.toDataURL());
-                //    MyData = canvas.toDataURL();
-
-                //    return true;
-                //});
-
-                //Blazor.registerFunction('JavaScriptLoadCanvasImage', (CanvasName) => {
-
-                //    var canvas = document.getElementsByTagName("canvas")[0];
-                //    var ctx = canvas.getContext("2d");
-
-                //    ctx.setTransform(1, 0, 0, 1, 0, 0);
-
-                //    //   ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-
-                //    //var dataURL = localStorage.getItem("abc");
-
-                //    var img = new Image;
-
-
-
-
-                //    //img.src = dataURL;
-
-                //    img.src = MyData;
-                //    img.onload = function () {
-                //        ctx.drawImage(img, 0, 0);
-
-
-                //        abc();
-
-
-                //    };
-
-                //    function abc() {
-
-
-                //        Blazor.invokeDotNetMethod({
-                //            type: {
-                //                assembly: 'BlazorApp1',
-                //                name: 'BlazorApp1.Pages.Counter'
-
-                //            },
-                //            method: {
-                //                name: 'cmd_drawTime'
-                //            }
-                //        })
-
-
-                //    }
-
-
-
-
-                //    return true;
-                //});
-
-
-
-    </script>
-
+    <script src="_framework/blazor.webassembly.js"></script>
 
 </body>
 </html>
