--- a/BlazorApp1/wwwroot/index.html
+++ b/BlazorApp1/wwwroot/index.html
@@ -13,7 +13,8 @@
     <app>Loading...</app>
 
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="faker.js"></script>
+    <script src="lib/faker.js"></script>
+    <script src="lib/lupFunctions.js"></script>
     <script src="BApp1JsInterop.js"></script>
 
 </body>
