--- a/BlazorApp1/wwwroot/index.html
+++ b/BlazorApp1/wwwroot/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
-    <title>Blazor Samples</title>
+    <title>Blazor Demos</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
@@ -12,7 +12,7 @@
 <body>
     <app>Loading...</app>
 
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_framework/components.webassembly.js"></script>
     <script src="lib/faker.js"></script>
     <script src="lib/lupFunctions.js"></script>
     <script src="BApp1JsInterop.js"></script>
