--- a/LupusaBlazorDemos/wwwroot/index.html
+++ b/LupusaBlazorDemos/wwwroot/index.html
@@ -8,7 +8,6 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="//kendo.cdn.telerik.com/2019.1.115/styles/kendo.material-v2.min.css" rel="stylesheet">
 </head>
 <body>
     <app>Loading...</app>
@@ -18,10 +17,16 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="_framework/blazor.webassembly.js"></script>
+
     <script src="lib/faker.js"></script>
     <script src="lib/lupFunctions.js"></script>
     <script src="LBDJsInterop.js"></script>
+    <script src="_content/BlazorWindowHelper/BWHJsInterop.js"></script>
+    <script src="_content/BlazorWebWorkerHelper/BwwJsInterop.js"></script>
+    <script src="_content/BlazorWebSocketHelper/BwsJsInterop.js"></script>
+    <script src="_content/BlazorSharedWebWorkerWebSocketHelper/BSwwWsJsInterop.js"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
+
 
 </body>
 </html>
