--- a/LupusaBlazorDemos/wwwroot/index.html
+++ b/LupusaBlazorDemos/wwwroot/index.html
@@ -21,10 +21,14 @@
     <script src="lib/faker.js"></script>
     <script src="lib/lupFunctions.js"></script>
     <script src="LBDJsInterop.js"></script>
+
     <script src="_content/BlazorWindowHelper/BWHJsInterop.js"></script>
     <script src="_content/BlazorWebWorkerHelper/BwwJsInterop.js"></script>
     <script src="_content/BlazorWebSocketHelper/BwsJsInterop.js"></script>
     <script src="_content/BlazorSharedWebWorkerWebSocketHelper/BSwwWsJsInterop.js"></script>
+    <script src="_content/BlazorClockSvgComponent/BCSCJsInterop.js"></script>
+    <script src="_content/BlazorClockCanvasComponent/BCCCJsInterop.js"></script>
+    <script src="_content/BlazorChessComponent/BChessCJsInterop.js"></script>
     <script src="_framework/blazor.webassembly.js" autostart="false"></script>
     <script>
         Blazor.start({
