--- a/LupusaBlazorDemos/wwwroot/index.html
+++ b/LupusaBlazorDemos/wwwroot/index.html
@@ -29,6 +29,9 @@
     <script src="_content/BlazorClockSvgComponent/BCSCJsInterop.js"></script>
     <script src="_content/BlazorClockCanvasComponent/BCCCJsInterop.js"></script>
     <script src="_content/BlazorChessComponent/BChessCJsInterop.js"></script>
+    <script src="_content/BlazorGameSnakeComponent/BGSnakeCJsInterop.js"></script>
+    <script src="_content/BlazorPaintComponent/BPaintCJsInterop.js"></script>
+    <script src="_content/BlazorJsFastDataExchanger/BJSFDEJsInterop.js"></script>
     <script src="_framework/blazor.webassembly.js" autostart="false"></script>
     <script>
         Blazor.start({
