--- a/LupusaBlazorDemos/wwwroot/index.html
+++ b/LupusaBlazorDemos/wwwroot/index.html
@@ -32,6 +32,9 @@
     <script src="_content/BlazorGameSnakeComponent/BGSnakeCJsInterop.js"></script>
     <script src="_content/BlazorPaintComponent/BPaintCJsInterop.js"></script>
     <script src="_content/BlazorJsFastDataExchanger/BJSFDEJsInterop.js"></script>
+    <script src="_content/BlazorVirtualGridComponent/BVirtualGridCJsInterop.js"></script>
+    <script src="_content/BlazorScrollbarComponent/BScrollbarCJsInterop.js"></script>
+    <script src="_content/BlazorSplitterComponent/BSplitterCJsInterop.js"></script>
     <script src="_framework/blazor.webassembly.js" autostart="false"></script>
     <script>
         Blazor.start({
