--- a/LupusaBlazorDemos/wwwroot/index.html
+++ b/LupusaBlazorDemos/wwwroot/index.html
@@ -43,7 +43,7 @@
                     case 'dotnetjs':
                     case 'dotnetwasm':
                     case 'timezonedata':
-                        return `https://lupusacdn.azureedge.net/blazor/rc/${name}`;
+                        return `https://lupusacdn.azureedge.net/blazor/rtm/${name}`;
                 }
             }
         });
